--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,26 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  background-color: aliceblue;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.timer {
+  display: flex;
+}
+
+.field {
+  border: 1px solid #212121;
+  padding: 5px 5px;
+  margin-right: 10px;
+  margin-top: 12px;
+  background-color: cornflowerblue;
+}  
+
+.field:last-child {
+  margin-right: 0;
 }
